plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.study.demo'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Slf4j
    implementation 'org.slf4j:slf4j-api:2.0.7'

    // Lombok
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'

    // Swagger
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9"
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.7.0'

    // JPA
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")

    //Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Smtp
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // S3
    implementation 'software.amazon.awssdk:s3:2.20.68'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // QueryDSL (Jakarta for Boot 3 / Hibernate 6)
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
}
jar {
    enabled = false
}
tasks.named('test') {
    useJUnitPlatform()
}
